k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-app-svc
spec:
  type: NodePort
  selector:
    app: project-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
